--- a/app/views/runner/running.html
+++ b/app/views/runner/running.html
@@ -13,7 +13,7 @@
                 <span class="separate">{{::run.title}}</span>
             </div>
             <div class="comments">
-                <span class="highlight">#{{::run.id}}</span>
+                <span>#{{::run.id}}</span>
                 <span>-</span>
                 <span>{{run.msg.runtime}}</span>
                 <i class="fa fa-globe separate"><span class="tip left">{{::run.msg.environment}}</span></i>
