--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -122,6 +122,7 @@ $content-list-item-1-com-color:         lighten($dark-gray, 25%);
 $content-list-2-button-margin-top:      .27em;
 $content-list-2-select-margin-top:      .17em;
 $content-list-item-2-height:            modular-scale($base-font-size, 2, $major-sixth);
+$content-list-item-2-det-height:        modular-scale($base-font-size, 3, $major-sixth);
 $content-list-item-2-bg-color:          lighten($section-header-bg-color, 15%);
 $content-list-item-2-font-size:         modular-scale($base-font-size, 1, $minor-third);
 $content-list-item-2-icon-size:         modular-scale($base-font-size, 1, $minor-seventh);
