--- a/app/views/modules/runner/running.html
+++ b/app/views/modules/runner/running.html
@@ -9,7 +9,7 @@
     <li class="ic cl list-animate" ng-repeat="run in filteredRuns = (runs() | runEnvironmentFilter:running.filter.env.ids) track by run.id">
         <div>
             <div class="title limited">
-                <div class="radial-progress" data-toggle="collection" progress="run.progress.percentage" highlight="run.progress.highlight"></div>
+                <div class="radial-progress" data-toggle="collection" progress="run.percentage" highlight="run.highlight"></div>
                 <span class="separate">{{::run.title}}</span>
             </div>
             <div class="comments">
@@ -21,18 +21,18 @@
             </div>
         </div>
         <ul>
-            <li class="ic cl" ng-repeat="story in run.progress.stories track by (run.id+'-'+story.id)">
+            <li class="ic cl" ng-repeat="story in run.stories track by (run.id+'-'+story.id)">
                 <div class="selectable" ng-class="{'active':running.selectedItem === 'story'+run.id+'-'+story.id}" ng-click="running.selectedItem = 'story'+run.id+'-'+story.id" data-toggle="story">
                     <div class="title">
-                        <div class="radial-progress" progress="story.progress.percentage" highlight="story.progress.highlight"></div>
+                        <div class="radial-progress" progress="story.percentage" highlight="story.highlight"></div>
                         <span class="separate">{{::story.title}}</span>
                     </div>
                 </div>
                 <ul>
                     <li class="ic cl" ng-repeat="scenario in story.scenarios track by (run.id+'-'+scenario.id)">
-                        <div class="selectable detailed {{scenario.progress.highlight}}" ng-class="{'active':running.selectedItem === 'scenario'+run.id+'-'+scenario.id}" ng-click="running.selectedItem = 'scenario'+run.id+'-'+scenario.id">
+                        <div class="selectable detailed {{scenario.highlight}}" ng-class="{'active':running.selectedItem === 'scenario'+run.id+'-'+scenario.id}" ng-click="running.selectedItem = 'scenario'+run.id+'-'+scenario.id">
                             <div class="title">
-                                <div class="radial-progress" progress="scenario.progress.percentage" highlight="scenario.progress.highlight"></div>
+                                <div class="radial-progress" progress="scenario.percentage" highlight="scenario.highlight"></div>
                                 <span class="separate">{{::scenario.title}}</span>
                             </div>
                             <div class="details">
