Remove bower bitters as it is no longer supported, now base styles are included in the application style

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,6 +1,6 @@
 // library
 @import 'bourbon';
-@import 'base';
+@import 'base/base';
 @import 'neat';
 // load the main theme color variables
 @import 'theme/colors';
