--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,32 +1,27 @@
-@charset "UTF-8";
-/* Bitters 0.10.0
- * http://bitters.bourbon.io
- * Copyright 2013ÔÇô2014 thoughtbot, inc.
- * MIT License */
 button,
-input[type="submit"] {
+input[type='submit'] {
   -webkit-font-smoothing: antialiased;
-  background-color: #477DCA;
+  background-color: #477dca;
   border-radius: 3px;
-  color: white;
+  color: #fff;
   display: inline-block;
   font-size: 1em;
   font-weight: bold;
   line-height: 1;
-  padding: 0.75em 1em;
+  padding: .75em 1em;
   text-decoration: none; }
   button:hover,
-  input[type="submit"]:hover {
+  input[type='submit']:hover {
     background-color: #2c5999;
-    color: white; }
+    color: #fff; }
   button:disabled,
-  input[type="submit"]:disabled {
+  input[type='submit']:disabled {
     cursor: not-allowed;
-    opacity: 0.5; }
+    opacity: .5; }
 
 body {
   -webkit-font-smoothing: antialiased;
-  background-color: white;
+  background-color: #fff;
   color: #333;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
@@ -68,7 +63,7 @@ a {
   -webkit-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #477DCA;
+  color: #477dca;
   text-decoration: none; }
   a:hover {
     color: #2c5999; }
@@ -77,10 +72,10 @@ a {
     outline: none; }
 
 hr {
-  border-bottom: 1px solid #DDD;
-  border-left: none;
-  border-right: none;
-  border-top: none;
+  border-bottom: 1px solid #ddd;
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
   margin: 1.5em 0; }
 
 img,
@@ -89,7 +84,7 @@ picture {
   max-width: 100%; }
 
 blockquote {
-  border-left: 2px solid #DDD;
+  border-left: 2px solid #ddd;
   color: #595959;
   margin: 1.5em 0;
   padding-left: 0.75em; }
@@ -98,12 +93,12 @@ cite {
   color: #737373;
   font-style: italic; }
   cite:before {
-    content: "\2014 \00A0"; }
+    content: '\2014 \00A0'; }
 
 fieldset {
   background: #f7f7f7;
-  border: 1px solid #DDD;
-  margin: 0 0 0.75em 0;
+  border: 1px solid #ddd;
+  margin: 0 0 0.75em;
   padding: 1.5em; }
 
 input,
@@ -117,7 +112,7 @@ label {
   font-weight: bold;
   margin-bottom: 0.375em; }
   label.required:after {
-    content: "*"; }
+    content: '*'; }
   label abbr {
     display: none; }
 
@@ -130,14 +125,14 @@ select[multiple=multiple] {
   -webkit-transition: border-color;
   -moz-transition: border-color;
   transition: border-color;
-  background-color: white;
+  background-color: #fff;
   border-radius: 3px;
-  border: 1px solid #DDD;
+  border: 1px solid #ddd;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
   margin-bottom: 0.75em;
-  padding: 0.5em 0.5em;
+  padding: 0.5em;
   width: 100%; }
   textarea:hover,
   input[type="email"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="url"]:hover, input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="month"]:hover, input[type="time"]:hover, input[type="week"]:hover,
@@ -146,26 +141,26 @@ select[multiple=multiple] {
   textarea:focus,
   input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus,
   select[multiple=multiple]:focus {
-    border-color: #477DCA;
+    border-color: #477dca;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
     outline: none; }
 
 textarea {
   resize: vertical; }
 
-input[type="search"] {
+input[type='search'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   -ms-appearance: none;
   -o-appearance: none;
   appearance: none; }
 
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
   display: inline;
   margin-right: 0.375em; }
 
-input[type="file"] {
+input[type='file'] {
   padding-bottom: 0.75em;
   width: 100%; }
 
@@ -187,7 +182,7 @@ th {
   text-align: left; }
 
 td {
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid #ddd;
   padding: 0.75em 0; }
 
 tr,
@@ -209,13 +204,13 @@ dl {
     margin: 0; }
 
 button,
-input[type="submit"] {
+input[type='submit'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   -ms-appearance: none;
   -o-appearance: none;
   appearance: none;
-  border: none;
+  border: 0;
   cursor: pointer;
   user-select: none;
   vertical-align: middle;
@@ -228,7 +223,7 @@ input[type="submit"] {
 
 .progress-bar {
   background-color: #f2f2f2;
-  border: 1px solid #DDD;
+  border: 1px solid #ddd;
   box-shadow: inset 0 0 3px 0 rgba(115, 115, 115, 0.15);
   border-radius: 3px;
   height: 30px;
@@ -616,7 +611,7 @@ div.layout {
     z-index: 10000; }
     div.layout > header .title,
     div.layout > header .search {
-      color: #DDD;
+      color: #ddd;
       font-size: 2em;
       position: relative;
       float: left; }
@@ -647,11 +642,11 @@ div.layout {
         background: none;
         border: 0;
         box-shadow: none;
-        color: #DDD;
+        color: #ddd;
         border-radius: 0; }
         div.layout > header .search input:-webkit-autofill {
           -webkit-box-shadow: 0 0 0 50px #1a1a1a inset;
-          -webkit-text-fill-color: #DDD; }
+          -webkit-text-fill-color: #ddd; }
   div.layout > aside,
   div.layout > .main {
     top: 4em; }
@@ -1146,8 +1141,8 @@ footer.feedback {
     padding: 0.25em 1em; }
   .top-filter > div .select > button,
   .main-content-list li.cl > div > div .select > button {
-    background: #DDD;
-    border: #DDD 2px solid;
+    background: #ddd;
+    border: #ddd 2px solid;
     padding: 0.25em 0.5em; }
     .top-filter > div .select > button span,
     .main-content-list li.cl > div > div .select > button span {
@@ -1160,7 +1155,7 @@ footer.feedback {
   position: relative; }
   .select > button {
     text-align: left;
-    border: #DDD 2px solid;
+    border: #ddd 2px solid;
     position: relative; }
     .select > button.active span {
       min-width: 10em; }
@@ -1215,7 +1210,7 @@ footer.feedback {
           position: absolute;
           right: 1em; }
       .select .select-dropdown li.placeholder {
-        border-bottom: #DDD 1px dashed; }
+        border-bottom: #ddd 1px dashed; }
     .select .select-dropdown button {
       background: none;
       color: #666666;
