Show run reports in the designated section and ensure the filter is working, also move some services around to improve packaging

--- a/app/sass/components/modules/content-list.scss
+++ b/app/sass/components/modules/content-list.scss
@@ -45,6 +45,14 @@
 
             > i {
                 color: $section-list-icon-color;
+
+                &.success {
+                    color: $success-color;
+                }
+
+                &.failed {
+                    color: $error-color;
+                }
             }
 
             > span,
