--- a/app/views/modules/runner/available.html
+++ b/app/views/modules/runner/available.html
@@ -70,5 +70,5 @@
         </ul>
     </li>
 </ul>
-<h1 class="hero-notice" translate="RUNNER.AVAILABLE.NO_STORIES" ng-show="filteredBooks.length === 0 && initialized"></h1>
+<h1 class="hero-notice" translate="RUNNER.AVAILABLE.NO_STORIES" ng-show="filteredBooks.length === 0 && initialized()"></h1>
 <div pagination class="pagination appear-delayed" has-next="available.hasMorePages()" current-page="available.currentPage" list-ref="available.storyListRef" />
