--- a/app/views/modules/runner/report.html
+++ b/app/views/modules/runner/report.html
@@ -1,13 +1,19 @@
-<div class="top-filter ng-hide filter-2 selectable" ng-show="filter.loaded" ng-class="{'active':available.selectedItem === null}" ng-click="available.selectedItem = null" ng-controller="ReportFilterCtrl as filter">
+<div class="top-filter filter-1 selectable" ng-class="{'active':report.selectedItem === null}" ng-click="report.selectedItem = null" ng-controller="ReportFilterCtrl as filter">
     <div class="filters">
-        <i class="fa fa-check-square-o" ng-class="{'inactive':!report.filter.status.ids.length}" ng-click="filter.expand.status = !filter.expand.status"></i>
-        <span translate="RUNNER.REPORT.FILTER.BEFORE_STATUS" ng-hide="!report.filter.status.ids.length && !filter.expand.status"></span>
-        <div class="select" filter-select="filter.statuses" filter-id="report.filter.status.id" placeholder="filter.statusPlaceholder" default="filter.statusesDefault" ng-hide="!filter.expand.status" max-items="{{::report.maxSelectItems}}"></div>
+        <i class="fa fa-check-square-o" ng-class="{'inactive':!report.filter.status.ids.length}"></i>
+        <span translate="RUNNER.REPORT.FILTER.BEFORE_STATUS"></span>
+        <div class="select" filter-select="filter.statuses" filter-id="report.filter.status.id" placeholder="filter.statusPlaceholder" default="filter.statusesDefault" max-items="{{::report.maxSelectItems}}"></div>
     </div>
 </div>
-<ul id="story-list" class="main-content-list filter-2">
-    <li class="ic cl list-animate" ng-repeat="report in filteredReports = (reports() | reportPaginationFilter:report.currentPage:report.maxReports) track by report.id">
+<ul id="report-list" class="main-content-list filter-1">
+    <li class="ic cl list-animate" ng-repeat="runReport in filteredReports = (reports() | reportPaginationFilter:report.currentPage:report.maxReports) track by runReport.id">
+        <div class="selectable" ng-class="{'active':report.selectedItem === 'report'+runReport.id}" ng-click="report.selectedItem = 'report'+runReport.id">
+            <div class="title">
+                <i class="fa" ng-class="runReport.status" data-toggle="collection"></i>
+                <span class="separate">{{::runReport.title}}</span>
+            </div>
+        </div>
     </li>
 </ul>
-<h1 class="hero-notice" translate="RUNNER.REPORT.NO_REPORTS" ng-show="filteredReports.length === 0 && initialized"></h1>
+<h1 class="hero-notice" translate="RUNNER.REPORT.NO_REPORTS" ng-show="filteredReports.length === 0 && initialized()"></h1>
 <div pagination class="pagination appear-delayed" has-next="report.hasMorePages()" current-page="report.currentPage" list-ref="report.reportListRef" />
