Improve data references in template by making use of objects in response data

--- a/app/views/modules/runner/running.html
+++ b/app/views/modules/runner/running.html
@@ -15,8 +15,8 @@
             <div class="comments">
                 <span>#{{::run.id}}</span>
                 <span>-</span>
-                <span>{{run.msg.runtime}}</span>
-                <i class="fa fa-globe separate"><span class="tip left">{{::run.msg.environment}}</span></i>
+                <span>{{run.runtime}}</span>
+                <i class="fa fa-globe separate"><span class="tip left">{{::run.environment.name}}</span></i>
                 <i class="fa fa-user"><span class="tip left">{{::run.startedBy.name}}</span></i>
             </div>
         </div>
