Show runtime, environment and user data in the report listing

--- a/app/views/modules/runner/report.html
+++ b/app/views/modules/runner/report.html
@@ -12,6 +12,13 @@
                 <i class="fa" ng-class="runReport.status" data-toggle="collection"></i>
                 <span class="separate">{{::runReport.title}}</span>
             </div>
+            <div class="comments">
+                <span>#{{::runReport.id}}</span>
+                <span>-</span>
+                <span>{{::runReport.runtime}}</span>
+                <i class="fa fa-globe separate"><span class="tip left">{{::runReport.environment.name}}</span></i>
+                <i class="fa fa-user"><span class="tip left">{{::runReport.startedBy.name}}</span></i>
+            </div>
         </div>
     </li>
 </ul>
