Add result messages to reports that are displayed when a report is selected

--- a/app/sass/components/modules/content-list.scss
+++ b/app/sass/components/modules/content-list.scss
@@ -21,6 +21,7 @@
         position: relative;
         color: $section-header-color;
         margin-top: $content-list-item-spacing;
+        padding-left: $section-list-icon-text-pad;
 
         &.selectable:hover {
             cursor: pointer;
@@ -60,18 +61,36 @@
                 @include ellipsis;
             }
         }
-    }
 
-    li.ic > div {
-        padding-left: $section-list-icon-text-pad;
-    }
-
-    li.cl > div {
         > i,
         > div.title > i,
         > div.title > .radial-progress {
             position: absolute;
         }
+
+        > div.details {
+            display: none;
+            float: left;
+            clear: both;
+            font-size: .9em;
+
+            .legend {
+                opacity: .7;
+            }
+        }
+
+        &.detailed.active {
+            min-height: $content-list-item-2-det-height;
+            max-height: $content-list-item-2-det-height;
+
+            > div.details {
+                display: block;
+            }
+        }
+    }
+
+    > li.cl > div > div.details {
+        margin: 0 $filter-button-padding / 2;
     }
 
     > li.cl > div.active,
@@ -323,26 +342,6 @@
 
                         > div.title > .radial-progress {
                             @include radial-progress(1em, 0, $run-progress-scenario-todo-bg, $run-progress-scenario-done-bg);
-                        }
-
-                        > div.details {
-                            display: none;
-                            float: left;
-                            clear: both;
-                            font-size: .9em;
-
-                            .legend {
-                                opacity: .7;
-                            }
-                        }
-
-                        &.detailed.active {
-                            min-height: $content-list-item-2-det-height;
-                            max-height: $content-list-item-2-det-height;
-
-                            > div.details {
-                                display: block;
-                            }
                         }
                     }
 
