--- a/app/views/modules/runner/report.html
+++ b/app/views/modules/runner/report.html
@@ -7,7 +7,7 @@
 </div>
 <ul id="report-list" class="main-content-list filter-1">
     <li class="ic cl list-animate" ng-repeat="runReport in filteredReports = (reports() | reportPaginationFilter:report.currentPage:report.maxReports) track by runReport.id">
-        <div class="selectable" ng-class="{'active':report.selectedItem === 'report'+runReport.id}" ng-click="report.selectedItem = 'report'+runReport.id">
+        <div class="selectable detailed" ng-class="{'active':report.selectedItem === 'report'+runReport.id}" ng-click="report.selectedItem = 'report'+runReport.id">
             <div class="title">
                 <i class="fa" ng-class="runReport.status" data-toggle="collection"></i>
                 <span class="separate">{{::runReport.title}}</span>
@@ -18,6 +18,9 @@
                 <span>{{::runReport.runtime}}</span>
                 <i class="fa fa-globe separate"><span class="tip left">{{::runReport.environment.name}}</span></i>
                 <i class="fa fa-user"><span class="tip left">{{::runReport.startedBy.name}}</span></i>
+            </div>
+            <div class="details">
+                <span class="legend">{{::runReport.message}}</span>
             </div>
         </div>
     </li>
